# fastapi-meetworld-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  agent.py  chat-stream.py  chat.py  pyproject.toml
.github/workflows/: ci.yml  deploy-dev.yml  deploy-production.yml  deploy-staging.yml
app/: config.py  main.py  security.py
app/routers/: agent.py  chat.py  grammar.py  health.py  stream.py  translate.py
app/schemas/: chat.py  grammar.py  health.py  translate.py
app/services/: _messages.py  agent.py  chat.py  grammar.py  openai_client.py  stream.py  translate.py
