[project]
name = "fastapi-meetworld-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "langchain>=1.3.11",
    "langgraph>=1.2.7",
    "openai>=2.44.0",
    "openai-agents>=0.17.7",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.10.0",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.4.5",
    "uvicorn>=0.50.0",
]
